# pyregtab

./: .gitattributes  .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
architecture/: index.html
conformance/: README.md  UPSTREAM  VERSION
conformance/negative/: conflict_anch_rec.rtl  conflict_rec_rec.rtl  ext_bad_position.rtl  ext_blank_name.rtl  ext_unbound_cell.rtl  ext_unbound_filter.rtl  lexer_bad_char.rtl  lexer_unclosed_string.rtl  parser_parens_condcontspec.rtl  parser_question_without_contspec.rtl  parser_unclosed_bracket.rtl  semantic_unknown_fragment.rtl  settings_unknown.rtl
conformance/positive/: illustrative.expected.rtl  illustrative.rtl  task_001.expected.rtl  task_001.rtl  task_002.expected.rtl  task_002.rtl  task_003.expected.rtl  task_003.rtl  task_005.expected.rtl  task_005.rtl  task_006.expected.rtl  task_006.rtl  task_007.expected.rtl  task_007.rtl  task_008.expected.rtl  task_008.rtl  task_009.expected.rtl  task_009.rtl  task_010.expected.rtl  task_010.rtl  task_011.expected.rtl  task_011.rtl  task_012.expected.rtl  task_012.rtl  task_013.expected.rtl  task_013.rtl  task_014.expected.rtl  task_014.rtl  task_015.expected.rtl  task_015.rtl  task_016.expected.rtl  task_016.rtl  task_017.expected.rtl  task_017.rtl  task_018.expected.rtl  task_018.rtl  task_019.rtl  task_020.expected.rtl  task_020.rtl  task_021.expected.rtl  (+254 more)
docs/: api.md  architecture.md  embedded-rtl.md  getting-started.md  ide-support.md  index.md  rtl-reference.md
docs/model/: atp.md  itm.md
embedded-rtl/: index.html
getting-started/: index.html
grammar/: RTL.g4  UPSTREAM
ide/: README.md
ide-support/: index.html
ide/vscode/: language-configuration.json  package.json
ide/vscode/syntaxes/: rtl-python-injection.tmLanguage.json  rtl.tmLanguage.json
model/atp/: index.html
model/itm/: index.html
plans/: EMBEDDED_RTL_DSL.md  PYREGTAB_MIGRATION_PLAN.md
python/pyregtab/: __init__.py  _core.pyi  dsl.py
rtl-lexer/: pygments_rtl.py  pyproject.toml
rtl-reference/: index.html
search/: search_index.json
src/: interp.rs  lib.rs  matcher.rs  py.rs  recordset.rs  semantics.rs  spec.rs  syntax.rs  tests.rs  util.rs
src/rtl/: ast.rs  build.rs  lexer.rs  mod.rs  parser.rs  serialize.rs
tests/: atp_patterns.py  task_runner.py  test_api.py  test_atp_tasks.py  test_conformance.py  test_dsl.py  test_roundtrip.py  test_rtl_tasks.py
tests/fixtures/tasks/: PROVENANCE.md  task_match_options.json  task_registry.json
tests/fixtures/tasks/task_001/: expected_1.csv  expected_2.csv  expected_3.csv  expected_4.csv  expected_5.csv  input_1.csv  input_2.csv  input_3.csv  input_4.csv  input_5.csv
tests/fixtures/tasks/task_002/: expected_1.csv  expected_2.csv  expected_3.csv  expected_4.csv  expected_5.csv  input_1.csv  input_2.csv  input_3.csv  input_4.csv  input_5.csv
tests/fixtures/tasks/task_003/: expected_1.csv  expected_2.csv  expected_3.csv  expected_4.csv  expected_5.csv  input_1.csv  input_2.csv  input_3.csv  input_4.csv  input_5.csv
tools/: RecordsetDumpMain.java  check_grammar_sync.py  differential.py  translate_atp.py
(+1248 files in other folders)
