[package]
name = "pyregtab"
version = "0.4.0"
edition = "2021"
description = "Native core of pyRegTab: RTL compiler, ATP matcher and table interpreter"
license = "MIT"

[lib]
name = "pyregtab"
crate-type = ["cdylib", "rlib"]

[features]
# The Python bindings (pyo3 module, External/Custom callbacks). Disable with
# `--no-default-features` to build the pure-Rust core (RTL compiler, matcher,
# interpreter) for embedding, e.g. in rtl-lsp.
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"], optional = true }
regex = "1"
indexmap = "2"

[profile.release]
lto = true
