[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyregtab"
version = "0.1.0"
description = "pyRegTab: pattern-based extraction of recordsets from tables (RTL / ATP / ITM)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Alexey O. Shigarov", email = "shigarov@gmail.com" }]
keywords = ["table", "extraction", "pattern", "RTL", "data-wrangling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
pandas = ["pandas"]

[tool.maturin]
python-source = "python"
module-name = "pyregtab._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
