[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyregtab"
version = "0.4.0"
description = "pyRegTab: pattern-based extraction of recordsets from tables (RTL / ATP / ITM)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Alexey O. Shigarov", email = "shigarov@gmail.com" }]
keywords = ["table", "extraction", "pattern", "RTL", "data-wrangling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
pandas = ["pandas"]

[tool.maturin]
python-source = "python"
module-name = "pyregtab._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
