[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-rtl"
version = "0.1.0"
description = "Pygments lexer for RTL (Regular Table Language)"
requires-python = ">=3.8"
dependencies = ["Pygments>=2.0"]

# Registers the lexer under the "rtl" alias so ```rtl fences highlight
[project.entry-points."pygments.lexers"]
rtl = "pygments_rtl:RtlLexer"

[tool.setuptools]
py-modules = ["pygments_rtl"]
